# YP-Module-1

./: .gitignore  SearchServer.hpp
Final_project/: CMakeLists.txt  main.cpp
Final_project/sources/: document.h  log_duration.h  paginator.h  read_input_functions.cpp  read_input_functions.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  unit_tests.cpp  unit_tests.h
Review/: CMakeLists.txt  main.cpp
Review/search-server/: main.cpp  read_input_functions.cpp  string_processing.h
Review/sources/: document.cpp  document.h  paginator.h  read_input_functions.h  request_queue.cpp  request_queue.h  search_server.cpp  search_server.h  string_processing.cpp
Sprint-3/: CMakeLists.txt
Sprint_1/: CMakeLists.txt  SearchSystem.hpp  main.cpp
Sprint_1/1. Basic algorithms/: algorithm_accumulate.hpp  parallel_sorting.hpp  set_count.hpp  sort_and_reverse.hpp  сount_and_count_if.hpp
Sprint_1/3. Lambda function/: lambda and ref.hpp  lambda_and_values.hpp  sort_compare.hpp
Sprint_1/4. Numeric types/: enum_class.hpp  overflow_mem.hpp
Sprint_1/5. Pair and Tuple/: improve_sort.hpp  pair_in_comporator.hpp  return_multiple_values.hpp  tuple_in_corporator.hpp  zadacha_o_zadachah.hpp
Sprint_1/6. Function templates/: TF_IDF.hpp  function_objects.hpp  operator_overload.hpp  template_function.hpp  term_frequencies.hpp
Sprint_2/: CMakeLists.txt  SearchSystem.hpp  sprint_2.cpp
Sprint_2/Topic_1/: lesson_3.hpp  lesson_6.hpp  lesson_7.hpp  theory_5.hpp  theory_6.hpp
Sprint_2/Topic_2/: lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  lesson_6.hpp  lesson_8.hpp
Sprint_3/: CMakeLists.txt  sprint_3.cpp
Sprint_3/Topic_1/: lesson_3.hpp  lesson_4.hpp  lesson_6.hpp  theory_7.hpp
Sprint_3/Topic_2/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  theory_1.hpp  theory_2.hpp  theory_3.hpp  theory_3_1.hpp  theory_4.hpp
Sprint_3/Topic_3/: lesson_2.hpp  lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  lesson_6.hpp  theory_5.hpp
Sprint_4/: CMakeLists.txt  sprint_4.cpp
Sprint_4/Topic_1/: lesson_1.hpp  lesson_2.hpp  lesson_2_to_5.hpp  lesson_7.hpp  lesson_8.hpp  lesson_9.hpp
Sprint_4/Topic_2/: lesson_2.hpp  lesson_4_1.hpp  lesson_4_2_3.hpp
Sprint_4/Topic_3/: lesson_1_1.hpp  lesson_1_2.hpp  lesson_1_3.hpp  lesson_2.hpp  lesson_3.hpp
Sprint_4/Topic_4/: accountant.h  lesson_runner.hpp
Sprint_5/: CMakeLists.txt  sprint_5.cpp
Sprint_5/Topic_1/: lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  lesson_6.hpp  lesson_7.hpp  lesson_9.hpp  log_duration.h  theory_1.hpp  theory_2.hpp  theory_3.hpp
Sprint_5/Topic_2/: lesson_3.hpp  theory_1.hpp
Sprint_5/Topic_3/: lesson_10.hpp  lesson_5.hpp  lesson_6.hpp  lesson_7.hpp  lesson_7_1.hpp  lesson_8.hpp  lesson_9.hpp  theory_1.hpp
Sprint_6/: CMakeLists.txt  sprint_6.cpp
Sprint_6/Topic_1/: lesson_1.hpp  lesson_10.hpp  lesson_10_2.hpp  lesson_2.hpp  lesson_6.hpp  lesson_7.hpp  lesson_8.hpp  lesson_8_2.hpp  octopus.hpp  ptrvector.hpp  scopedptr.hpp  theory_10.hpp  theory_6.hpp
Sprint_6/Topic_2/: SingleLinkedList.hpp  lesson_1.hpp  tests.hpp
Sprint_7/: CMakeLists.txt  sprint_7.cpp
Sprint_7/Topic_1/: array.cpp  find.cpp  hello.cpp  lesson_1.hpp  list.h  mean.cpp  median.cpp  tuple.cpp
Sprint_7/Topic_2/: lesson_1.hpp
Sprint_7/Topic_2/lesson_2_stack_vector/: lesson_2.hpp  stack_vector.hpp  tmp.hpp
Sprint_7/Topic_2/lesson_3_string_view/: lesson_3.hpp
Sprint_7/Topic_2/lesson_4_vacab/: lesson_4.hpp
Sprint_7/Topic_2/lesson_5_simple_vector/: array_ptr.hpp  lesson_5.hpp  simple_vector.hpp  tests.hpp
Sprint_7/Topic_3/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp  lesson_4.hpp
Sprint_7/Topic_3/lesson_5/: josephus_permutation.hpp  lesson_5.hpp  sentence.hpp
Sprint_7/final/: array_ptr.hpp  final_main.hpp  simple_vector.hpp  tests.hpp
Sprint_7/tmp/: scoped_ptr.hpp  tmp.hpp
Sprint_8/: CMakeLists.txt  benchmark.hpp  sprint_7.cpp  sprint_8.cpp  test_framework.hpp
Sprint_8/Topic_1/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  lesson_6.hpp  lesson_7.hpp  lesson_8.hpp  log_duration.hpp
Sprint_8/Topic_1/benchmarks/: benchmark_1.hpp  benchmark_2.hpp  benchmark_3.hpp
Sprint_8/Topic_1/search_system/: document.cpp  document.h  log_duration.h  main.cpp  paginator.h  process_queries.cpp  process_queries.h  read_input_functions.cpp  read_input_functions.h  remove_duplicates.cpp  remove_duplicates.h  request_queue.cpp  search_server.cpp  search_server.h  string_processing.cpp  string_processing.h  test_example_functions.cpp  test_example_functions.h
Sprint_8/Topic_2/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp  lesson_4.hpp  lesson_5.hpp  theory_1.hpp
Sprint_8/Topic_3/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp
Sprint_9/: CMakeLists.txt  canterbury.txt  sprint_9.cpp
Sprint_9/Topic_1/: lesson_1.hpp  lesson_2.hpp  lesson_3.hpp  lesson_4.hpp
