cmake_minimum_required(VERSION 3.15)
project(SPRINT_5)
set(CMAKE_CXX_STANDARD 17)

#----------------------------------------------------
set(TOPIC_1 "${CMAKE_CURRENT_SOURCE_DIR}/Topic_1")

#set (SOURCES
#        )



#	`include_directories("${TOPIC_1}")
#----------------------------------------------------
add_executable( sprint_5 sprint_5.cpp)

