cmake_minimum_required(VERSION 3.15)
project(SPRINT_8)
set(CMAKE_CXX_STANDARD 20)

#----------------------------------------------------
add_executable( sprint_8 sprint_8.cpp "Topic_1/lesson_2.hpp" "Topic_1/lesson_3.hpp" "Topic_1/lesson_4.hpp" "Topic_1/search_system/document.cpp" "Topic_1/search_system/document.h" "Topic_1/search_system/log_duration.h" "Topic_1/search_system/main.cpp" "Topic_1/search_system/paginator.h" "Topic_1/search_system/read_input_functions.cpp" "Topic_1/search_system/read_input_functions.h" "Topic_1/search_system/remove_duplicates.cpp" "Topic_1/search_system/remove_duplicates.h" "Topic_1/search_system/request_queue.cpp" "Topic_1/search_system/request_queue.h" "Topic_1/search_system/search_server.cpp" "Topic_1/search_system/search_server.h" "Topic_1/search_system/string_processing.cpp" "Topic_1/search_system/string_processing.h" "Topic_1/search_system/test_example_functions.cpp" "Topic_1/search_system/test_example_functions.h" "Topic_1/search_system/process_queries.cpp" "Topic_1/lesson_5.hpp" "Topic_1/benchmark.hpp" "Topic_1/lesson_6.hpp")

